<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="title_activity_read_write">ReadWrite</string>
    <string name="title_activity_add_contact">AddContact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">E-mail Address</string>
    <string name="save_contact">Save Contact</string>
    <string name="cancel_action">Cancel</string>

</resources>
